# Book_To_Web

./: .gitignore
btw/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  pytest.ini
btw/agents/: __init__.py  _placeholder.py  base.py  companion.py  conductor.py  creator.py  critic.py  curator.py  director.py  engineer.py  evolver.py  guardian.py  illustrator.py  parser.py  persona.py  planner.py  reader.py  retriever.py  stylist.py  translator.py
btw/api/: routes.py
btw/config/: __init__.py
btw/config/prompts/: creator_system.txt
btw/core/: __init__.py  errors.py  limits.py
btw/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
btw/frontend/e2e/: renderer.spec.ts
btw/frontend/src/: App.tsx  index.css
btw/models/: __init__.py  base.py  claude_adapter.py  ollama_adapter.py  openai_adapter.py
btw/services/: __init__.py  book_service.py
btw/skills/: __init__.py  base.py  code_compile.py  code_validate.py  js_ast_validate.mjs  llm_call.py  pdf_to_markdown.py
btw/storage/: __init__.py  book_store.py  db.py  vector_store.py
btw/tests/: __init__.py  conftest.py
btw/tests/agents/: __init__.py  test_base.py  test_creator.py  test_director.py  test_engineer.py  test_parser.py  test_reader.py  test_registry.py  test_specialized_agents.py
btw/tests/api/: __init__.py  test_error_contract.py  test_metrics_and_versions.py  test_smoke.py
btw/tests/core/: test_limits.py
btw/tests/models/: __init__.py  test_base.py
btw/tests/services/: test_book_service.py
btw/tests/skills/: __init__.py  (+3 more)
(+17 files in other folders)
